Better type detection.
Reviewed by @tolmasky.

--- a/ecma262/es2022/well-known-intrinsic-objects.json
+++ b/ecma262/es2022/well-known-intrinsic-objects.json
@@ -45,6 +45,42 @@
     ]
   },
   {
+    "WKID": "ES2022.AggregateError.prototype.message",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "AggregateError",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "message",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.AggregateError.prototype.name",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "AggregateError",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "name",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.Array",
     "type": "function",
     "descriptorKeyPath": [
@@ -1315,6 +1351,24 @@
     }
   },
   {
+    "WKID": "ES2022.ArrayBuffer.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "ArrayBuffer",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.ArrayBuffer",
     "type": "function",
     "descriptorKeyPath": [
@@ -1438,6 +1492,24 @@
     }
   },
   {
+    "WKID": "ES2022.ArrayBuffer.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "ArrayBuffer",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.%ArrayIteratorPrototype%.next",
     "type": "function",
     "descriptorKeyPath": [
@@ -1454,6 +1526,20 @@
       "required": [],
       "optional": []
     }
+  },
+  {
+    "WKID": "ES2022.%ArrayIteratorPrototype%.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "%ArrayIteratorPrototype%",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
   },
   {
     "WKID": "ES2022.%AsyncFromSyncIteratorPrototype%.next",
@@ -1554,7 +1640,7 @@
   },
   {
     "WKID": "ES2022.AsyncFunction.length",
-    "type": "object",
+    "type": "number",
     "descriptorKeyPath": [
       {
         "key": "AsyncFunction",
@@ -1581,8 +1667,8 @@
     ]
   },
   {
-    "WKID": "ES2022.AsyncFunction.prototype.constructor",
-    "type": "object",
+    "WKID": "ES2022.AsyncFunction.prototype.\"@@toStringTag\"",
+    "type": "string",
     "descriptorKeyPath": [
       {
         "key": "AsyncFunction",
@@ -1593,7 +1679,7 @@
         "field": "[[Value]]"
       },
       {
-        "key": "constructor",
+        "key": "@@toStringTag",
         "field": "[[Value]]"
       }
     ]
@@ -1625,7 +1711,7 @@
   },
   {
     "WKID": "ES2022.AsyncGeneratorFunction.length",
-    "type": "object",
+    "type": "number",
     "descriptorKeyPath": [
       {
         "key": "AsyncGeneratorFunction",
@@ -1665,6 +1751,24 @@
       },
       {
         "key": "prototype",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.AsyncGeneratorFunction.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "AsyncGeneratorFunction",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
         "field": "[[Value]]"
       }
     ]
@@ -2101,6 +2205,20 @@
     }
   },
   {
+    "WKID": "ES2022.Atomics.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "Atomics",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.BigInt",
     "type": "function",
     "descriptorKeyPath": [
@@ -2274,6 +2392,24 @@
       "required": [],
       "optional": []
     }
+  },
+  {
+    "WKID": "ES2022.BigInt.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "BigInt",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
   },
   {
     "WKID": "ES2022.Boolean",
@@ -3157,6 +3293,24 @@
         }
       ]
     }
+  },
+  {
+    "WKID": "ES2022.DataView.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "DataView",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
   },
   {
     "WKID": "ES2022.Date",
@@ -4657,6 +4811,42 @@
     ]
   },
   {
+    "WKID": "ES2022.Error.prototype.message",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "Error",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "message",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Error.prototype.name",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "Error",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "name",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.Error.prototype.toString",
     "type": "function",
     "descriptorKeyPath": [
@@ -4800,6 +4990,24 @@
     }
   },
   {
+    "WKID": "ES2022.FinalizationRegistry.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "FinalizationRegistry",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.%ForInIteratorPrototype%.next",
     "type": "function",
     "descriptorKeyPath": [
@@ -4844,7 +5052,7 @@
   },
   {
     "WKID": "ES2022.Function.length",
-    "type": "object",
+    "type": "number",
     "descriptorKeyPath": [
       {
         "key": "Function",
@@ -5054,7 +5262,7 @@
   },
   {
     "WKID": "ES2022.GeneratorFunction.length",
-    "type": "object",
+    "type": "number",
     "descriptorKeyPath": [
       {
         "key": "GeneratorFunction",
@@ -5094,6 +5302,24 @@
       },
       {
         "key": "prototype",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.GeneratorFunction.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "GeneratorFunction",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
         "field": "[[Value]]"
       }
     ]
@@ -5230,6 +5456,20 @@
         }
       ]
     }
+  },
+  {
+    "WKID": "ES2022.JSON.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "JSON",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
   },
   {
     "WKID": "ES2022.Map",
@@ -5537,6 +5777,24 @@
     }
   },
   {
+    "WKID": "ES2022.Map.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "Map",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.%MapIteratorPrototype%.next",
     "type": "function",
     "descriptorKeyPath": [
@@ -5555,11 +5813,151 @@
     }
   },
   {
+    "WKID": "ES2022.%MapIteratorPrototype%.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "%MapIteratorPrototype%",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.Math",
     "type": "object",
     "descriptorKeyPath": [
       {
         "key": "Math",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Math.E",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Math",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "E",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Math.LN10",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Math",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "LN10",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Math.LN2",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Math",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "LN2",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Math.LOG10E",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Math",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "LOG10E",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Math.LOG2E",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Math",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "LOG2E",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Math.PI",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Math",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "PI",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Math.SQRT1_2",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Math",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "SQRT1_2",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Math.SQRT2",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Math",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "SQRT2",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Math.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "Math",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
         "field": "[[Value]]"
       }
     ]
@@ -6446,6 +6844,20 @@
     }
   },
   {
+    "WKID": "ES2022.Number.EPSILON",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Number",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "EPSILON",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.Number.isFinite",
     "type": "function",
     "descriptorKeyPath": [
@@ -6543,7 +6955,7 @@
   },
   {
     "WKID": "ES2022.Number.MAX_SAFE_INTEGER",
-    "type": "object",
+    "type": "number",
     "descriptorKeyPath": [
       {
         "key": "Number",
@@ -6556,8 +6968,22 @@
     ]
   },
   {
+    "WKID": "ES2022.Number.MAX_VALUE",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Number",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "MAX_VALUE",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.Number.MIN_SAFE_INTEGER",
-    "type": "object",
+    "type": "number",
     "descriptorKeyPath": [
       {
         "key": "Number",
@@ -6565,6 +6991,62 @@
       },
       {
         "key": "MIN_SAFE_INTEGER",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Number.MIN_VALUE",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Number",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "MIN_VALUE",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Number.NaN",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Number",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "NaN",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Number.NEGATIVE_INFINITY",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Number",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "NEGATIVE_INFINITY",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
+    "WKID": "ES2022.Number.POSITIVE_INFINITY",
+    "type": "number",
+    "descriptorKeyPath": [
+      {
+        "key": "Number",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "POSITIVE_INFINITY",
         "field": "[[Value]]"
       }
     ]
@@ -8007,6 +8489,24 @@
     }
   },
   {
+    "WKID": "ES2022.Promise.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "Promise",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.Proxy",
     "type": "function",
     "descriptorKeyPath": [
@@ -8459,6 +8959,20 @@
       ],
       "optional": []
     }
+  },
+  {
+    "WKID": "ES2022.Reflect.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "Reflect",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
   },
   {
     "WKID": "ES2022.RegExp",
@@ -8947,6 +9461,20 @@
     }
   },
   {
+    "WKID": "ES2022.%RegExpStringIteratorPrototype%.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "%RegExpStringIteratorPrototype%",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.Object.prototype.__proto__.[[Set]]",
     "type": "function",
     "descriptorKeyPath": [
@@ -9215,6 +9743,24 @@
     }
   },
   {
+    "WKID": "ES2022.Set.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "Set",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.%SetIteratorPrototype%.next",
     "type": "function",
     "descriptorKeyPath": [
@@ -9231,6 +9777,20 @@
       "required": [],
       "optional": []
     }
+  },
+  {
+    "WKID": "ES2022.%SetIteratorPrototype%.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "%SetIteratorPrototype%",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
   },
   {
     "WKID": "ES2022.SharedArrayBuffer",
@@ -9330,6 +9890,24 @@
       ],
       "optional": []
     }
+  },
+  {
+    "WKID": "ES2022.SharedArrayBuffer.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "SharedArrayBuffer",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
   },
   {
     "WKID": "ES2022.String",
@@ -10441,6 +11019,20 @@
     }
   },
   {
+    "WKID": "ES2022.%StringIteratorPrototype%.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "%StringIteratorPrototype%",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.Symbol",
     "type": "function",
     "descriptorKeyPath": [
@@ -10795,6 +11387,24 @@
     }
   },
   {
+    "WKID": "ES2022.Symbol.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "Symbol",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.%ThrowTypeError%",
     "type": "function",
     "descriptorKeyPath": [
@@ -11146,24 +11756,6 @@
       {
         "key": "byteOffset",
         "field": "[[Get]]"
-      }
-    ]
-  },
-  {
-    "WKID": "ES2022.%TypedArray%.prototype.constructor",
-    "type": "object",
-    "descriptorKeyPath": [
-      {
-        "key": "%TypedArray%",
-        "field": "[[Value]]"
-      },
-      {
-        "key": "prototype",
-        "field": "[[Value]]"
-      },
-      {
-        "key": "constructor",
-        "field": "[[Value]]"
       }
     ]
   },
@@ -12118,6 +12710,24 @@
     }
   },
   {
+    "WKID": "ES2022.WeakMap.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "WeakMap",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
+  },
+  {
     "WKID": "ES2022.WeakRef",
     "type": "function",
     "descriptorKeyPath": [
@@ -12172,6 +12782,24 @@
       "required": [],
       "optional": []
     }
+  },
+  {
+    "WKID": "ES2022.WeakRef.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "WeakRef",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
   },
   {
     "WKID": "ES2022.WeakSet",
@@ -12290,5 +12918,23 @@
       ],
       "optional": []
     }
+  },
+  {
+    "WKID": "ES2022.WeakSet.prototype.\"@@toStringTag\"",
+    "type": "string",
+    "descriptorKeyPath": [
+      {
+        "key": "WeakSet",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "prototype",
+        "field": "[[Value]]"
+      },
+      {
+        "key": "@@toStringTag",
+        "field": "[[Value]]"
+      }
+    ]
   }
 ]
