--- a/fail/package.json
+++ b/fail/package.json
@@ -2,7 +2,7 @@
   "name": "@reified/fail",
   "version": "1.0.0-alpha.1",
   "description": "",
-  "main": "ftagged.js",
+  "main": "fail.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/tolmasky/reified"
