--- a/reified-object/package.json
+++ b/reified-object/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@reified/object",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "",
   "main": "reified-object.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tolmasky/reified"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
