Move intrinsics to reified-intrinsics to follow naming convention.
Reviewed by @tolmasky.

--- a/reified-intrinsics/package.json
+++ b/reified-intrinsics/package.json
@@ -2,7 +2,11 @@
   "name": "@reified/intrinsics",
   "version": "1.0.0-alpha.5",
   "description": "",
-  "main": "intrinsics.js",
+  "main": "reified-intrinsics.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tolmasky/reified"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
