--- a/reified-object/package.json
+++ b/reified-object/package.json
@@ -18,7 +18,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@reified/fail": "^1.0.0-alpha.1",
-    "@reified/intrinsics": "^1.0.0-alpha.5"
+    "@reified/fail": "1.0.0-alpha.1",
+    "@reified/intrinsics": "1.0.0-alpha.6"
   }
 }
