--- a/reified-foundation/package.json
+++ b/reified-foundation/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "@reified/language",
-  "version": "1.0.0-alpha.1",
+  "name": "@reified/foundation",
+  "version": "1.0.0",
   "description": "",
-  "main": "reified-language.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tolmasky/reified"
-  },
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
