--- a/reified-function/package.json
+++ b/reified-function/package.json
@@ -19,9 +19,11 @@
   "license": "MIT",
   "dependencies": {
     "@babel/parser": "^7.21.4",
-    "@babel/types": "^7.21.4",
-    "@reified/fail": "^1.0.0-alpha.1",
-    "@reified/intrinsics": "^1.0.0-alpha.5",
-    "@reified/object": "^1.0.0-alpha.2"
+    "@babel/types": "^7.21.4"
+  },
+  "peerDependencies": {
+    "@reified/core": "1.0.0-alpha.1",
+    "@reified/ecma-262": "1.0.0-alpha.1",
+    "@reified/object": "1.0.0-alpha.2"
   }
 }
