Add record syntax and special JSX handling.
Reviewed by @tolmasky.

--- a/reified-jsx/package.json
+++ b/reified-jsx/package.json
@@ -2,6 +2,7 @@
   "name": "@reified/jsx",
   "version": "1.0.0-alpha.1",
   "description": "",
+  "main": "reified-jsx.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
