--- a/reified-core/package.json
+++ b/reified-core/package.json
@@ -2,7 +2,7 @@
   "name": "@reified/core",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "reified-core.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
