--- a/reified-core/package.json
+++ b/reified-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reified/core",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "description": "",
   "main": "reified-core.js",
   "scripts": {
